# 2dots1line

./: .dockerignore  .env.backup  .env.current  .env.example  .gitignore  .icloudignore  .npmrc  .service-pids  2d1l-docker.service  CLEANUP-REPORT.md  COMPUTE_ENGINE_DEPLOYMENT.md  CYCLE_FAILURE_ANALYSIS_501e4303.md  Dockerfile  Dockerfile.dev  Dockerfile.web  Dockerfile.web.dev  Dockerfile.workers  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SETUP_GUIDE.md  FORCE_REINITIALIZE_BUG_IMPACT_ANALYSIS.md  GOOGLE_CLOUD_SETUP_LOG.md  GOOGLE_CLOUD_VM_SETUP_GUIDE.md  IMPLEMENTATION_CARD_COVER_STYLE_SELECTOR.md  IMPLEMENTATION_COMPLETE_TWO_PART_RESPONSES.md  IMPLEMENTATION_COMPLETE_VIDEO_NOTIFICATIONS.md  IMPLEMENTATION_SUMMARY_AI_MEDIA_GENERATION.md  IMPLEMENTATION_SUMMARY_VIEW_SWITCH_CONSENT.md  INVESTIGATION_JSON_PARSING_ERROR.md  INVESTIGATION_STREAMING_ERROR_PATTERNS.md  INVESTIGATION_TRUNCATION_ROOT_CAUSE.md  InfiniteCardCanvasREFERENCE.css  InfiniteCardCanvasREFERENCE.tsx  MOBILE_DASHBOARD_IMPLEMENTATION_SUMMARY.md  Makefile  MemoryLayerDesign-Organized.md  Multi-Style Covers.txt  PHASE_I_INTELLIGENCE_REPORT.md  README-AI-CONFIGURATION.md  README.md  SERVER-MANAGEMENT-GUIDE.md  (+46 more)
2Dots1LineObs/: 2Dots1Line PDR.md  Implementation_Plan.md  User journey design.md
DesignDocuments/: AIDotPrompt.md  LatestDesignDocument.md  MemoryManagerPrompt.md  QUICK_START.md
DevLog/: 1.3DotCoreIdentity.md  20250605Landing page dev.md  20250605USER_MANUAL.md  20250606AgentAPIIntegration.md  (+31 more)
py-services/dimension-reducer/: Dockerfile  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
(+1011 files in other folders)
