[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimension-reducer"
version = "1.0.0"
description = "Dimension reduction microservice for 2D1L knowledge graph visualization"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0", 
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "umap-learn>=0.5.5",
    "scikit-learn>=1.4.0",
    "numba>=0.59.0"
]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pylint]
load-plugins = ["pylint.extensions.docparams"]
disable = ["missing-docstring", "invalid-name"] 